--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
     <title>nrf53</title>
+      <style>
+    p{
+      text-align:center;
+    }
+  </style>
   </head>
   <body>
-    Just Do it.
+    <p>Just Do it.</p>
+    <p><a href=https://github.com/nrf53>GitHUb</a></p>
+    <p><a href=https://twitter.com/n_rf53>X (Twitter)</p>
   </body>
 </html>
